--- a/package.json
+++ b/package.json
@@ -2,13 +2,19 @@
   "name": "mern_fullstackapp",
   "version": "1.0.0",
   "description": ".....\r This is a simple Full Stack App built on MERN technologies..",
-  "main": "index.js",
+  "main": "myserver.js",
   "scripts": {
+    "start": "node myserver.js",
+    "startmon": "nodemon myserver.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "chanduj",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.7",
     "express": "^4.18.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
