--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node myserver.js",
     "startmon": "nodemon myserver.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "startserverlocaldb" : "nodemon mylocaldbserver.js"
+    "startserverlocaldb": "nodemon mylocaldbserver.js"
   },
   "author": "chanduj",
   "license": "ISC",
@@ -15,7 +15,8 @@
     "axios": "^1.6.7",
     "cors": "^2.8.5",
     "express": "^4.18.3",
-    "mongodb": "^6.4.0"
+    "mongodb": "^6.4.0",   
+    "mysql2": "^3.9.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
