--- a/package.json
+++ b/package.json
@@ -7,16 +7,20 @@
     "start": "node myserver.js",
     "startmon": "nodemon myserver.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "startserverlocaldb": "nodemon mylocaldbserver.js"
+    "startserverlocaldb": "nodemon mylocaldbserver.js",
+    "shivaserver": "nodemon shivaserver.js"
   },
   "author": "chanduj",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.7",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.18.3",
-    "mongodb": "^6.4.0",   
-    "mysql2": "^3.9.2"
+    "mongodb": "^6.4.0",
+    "mysql2": "^3.9.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
